--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 {{ .Content }}
 {{- partial "social_icons.html" $.Site.Params.socialIcons -}}
-<h2>Most Recent</h2>
+<h2>Most Recent Writing</h2>
 
 <h3 class="posts">Reflection</h3>
 <ul id="posts">
