--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <h1>404 Error Page Not Found 😭</h1> <br>
-<p>OOPS! Looks like Andy hasn't published that post yet, in the mean time you can browse the archive :)</p>
+<p>OOPS! Looks like Cafwin hasn't published that post yet, in the mean time you can browse the archive :)</p>
 {{- partial "reflections.html" . -}}
 {{- partial "posts.html" . -}}
 {{ end }}
